# gdextension_cpp_example

./: .gitignore  CMakeLists.txt  README.md  toolchain-mingw.cmake
demo/: icon.svg.import  main.gd  main.tscn
src/: CMakeLists.txt  gdexample.cpp  gdexample.h
